[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jones"
path = "src/bin/jonescli.rs"

[dependencies]
structopt = "0.3.13"
ansi_term = "0.12.1"

navigation = { path = "../navigation" }
extractors = { path = "../extractors" }
